--- a/silver_network/views/silver_device_networks_views.xml
+++ b/silver_network/views/silver_device_networks_views.xml
@@ -12,7 +12,7 @@
             <field name="name">silver.device.networks.tree</field>
             <field name="model">silver.device.networks</field>
             <field name="arch" type="xml">
-                <tree string="Redes de Dispositivos Silver">
+                <tree string="Redes de Dispositivos">
                     <field name="name"/>
                 </tree>
             </field>
@@ -22,7 +22,7 @@
             <field name="name">silver.device.networks.form</field>
             <field name="model">silver.device.networks</field>
             <field name="arch" type="xml">
-                <form string="Red de Dispositivos Silver">
+                <form string="Red de Dispositivos">
                     <sheet>
                         <group>
                             <field name="name"/>
