--- a/silver_network/views/silver_ap_views.xml
+++ b/silver_network/views/silver_ap_views.xml
@@ -6,7 +6,7 @@
             <field name="name">silver.ap.tree</field>
             <field name="model">silver.ap</field>
             <field name="arch" type="xml">
-                <tree string="Equipos AP Silver" default_order="name desc">
+                <tree string="Equipos AP" default_order="name desc">
                     <field name="name"/>
                     <field name="hostname_ap"/>
                     <!--field name="brand_id"/-->
@@ -35,7 +35,7 @@
             <field name="name">silver.ap.form</field>
             <field name="model">silver.ap</field>
             <field name="arch" type="xml">
-                <form string="Equipo AP Silver">
+                <form string="Equipo AP">
                     <sheet>
                         <div class="oe_button_box" name="button_box">
 
