--- a/silver_network/views/silver_core_port_line_views.xml
+++ b/silver_network/views/silver_core_port_line_views.xml
@@ -12,7 +12,7 @@
             <field name="name">silver.core.port.line.tree</field>
             <field name="model">silver.core.port.line</field>
             <field name="arch" type="xml">
-                <tree string="Líneas de Puerto de Core Silver">
+                <tree string="Líneas de Puerto de Core">
                     <field name="name"/>
                     <field name="core_id"/>
                 </tree>
@@ -23,7 +23,7 @@
             <field name="name">silver.core.port.line.form</field>
             <field name="model">silver.core.port.line</field>
             <field name="arch" type="xml">
-                <form string="Línea de Puerto de Core Silver">
+                <form string="Línea de Puerto de Core">
                     <sheet>
                         <group>
                             <field name="name"/>
