--- a/silver_product/views/stock_lot_views.xml
+++ b/silver_product/views/stock_lot_views.xml
@@ -43,6 +43,7 @@
                     <attribute name="context">{'open_product_template': True, 'default_etype':context.get('default_etype')}</attribute>
                     <attribute name="on_change">1</attribute>
                     <attribute name="options">{'no_create_edit': False, 'no_quick_create': True}</attribute>
+                    <attribute name="domain" add="[('etype', '=', context.get('default_etype'))]" separator="&amp;"/>
                 </field>
                 <xpath expr="//form" position="attributes">
                     <attribute name="class" add="form_stocklot"/>
