--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -76,11 +76,8 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                                                     readonly="state_service == 'active'"
                                                domain="[('olt_id', '=', olt_id), '|', ('contract_id', '=', False), ('contract_id', '=', id)]"
                                                invisible="(old_discovered and (discovered_onu_id==False)) or (not olt_id) or (state_service == 'active')" nolabel="1" />
-
+<br invisible="(olt_id==False) or (state_service == 'active') or(  (old_discovered == False) and (discovered_onu_id != False))" />
                                     <!--br invisible="(not ((not olt_id) or (state_service == 'active')))"/-->
-                                    <br invisible="[
-           '|', '|', '|',
-           ('olt_id', '=', False),               ('state_service', '=', 'active'),     ('old_discovered', '=', False),       ('discovered_onu_id', '!=', False)    ]" />
 
                         <field name="olt_port_id" domain="[('olt_id', '=', olt_id)]"  readonly="state_service == 'active'"/>
                         <field name="onu_pon_id"  readonly="state_service == 'active'"/>
